# simd-benches

./: Cargo.toml  README.md
benches/: min.rs  sum.rs  sum_nulls.rs  sum_nulls_bitmap.rs  take.rs  take_nulls_bitmap.rs
src/: bitmap_ops.rs  lib.rs  min.rs  sum.rs  sum_nulls.rs  sum_nulls_bitmap.rs  take.rs
