[package]
name = "simd_benches"
version = "0.1.0"
edition = "2021"

[dependencies]
core_simd = { git = "https://github.com/rust-lang/portable-simd" }
packed_simd = { version = "0.3", package = "packed_simd_2" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sum"
harness = false

[[bench]]
name = "sum_nulls"
harness = false

[[bench]]
name = "sum_nulls_bitmap"
harness = false

[[bench]]
name = "min"
harness = false
